--- a/sadans-backend-app/package.json
+++ b/sadans-backend-app/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "pg": "^8.12.0"
   }
 }
