--- a/sadans-backend-app/package.json
+++ b/sadans-backend-app/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "express": "^4.19.2",
