--- a/sadans-backend-app/package.json
+++ b/sadans-backend-app/package.json
@@ -14,6 +14,8 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "express": "^4.19.2",
+    "fast-csv": "^5.0.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "pg": "^8.12.0"
