--- a/sadans-backend-app/package.json
+++ b/sadans-backend-app/package.json
@@ -18,6 +18,8 @@
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
